--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.m06uf1practa</groupId>
-    <artifactId>M06UF1PracTA</artifactId>
+    <groupId>com.m06uf1practj</groupId>
+    <artifactId>M06UF1PracTJ</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -105,4 +105,5 @@
             </plugin>
         </plugins>
     </build>
+    <name>M06UF1PracTJ</name>
 </project>
